frontend/test/should_fail/inh_007.grg
using inh_model_007;

rule bla { 

	replace{} 
}
